# full-duplex

./: AGENTS.md  GOAL.md  PROGESS.md  bundle_script.py  full_duplex_minimal_plan_for_claude.md  generate_short_tts.py
full_duplex_poc/: __init__.py  app.py  audio_types.py  audio_utils.py  buffers.py  config.py  fake_asr.py  generate_audio.py  generate_tts_hf.py  interruption_detector.py  llm.py  main.py  pipeline.py  project_summary_for_chatgpt.md  pyproject.toml  run_offline_eval.py  smart_turn.py  state_machine.py  target_speaker_backend.py  tts_player.py  turn_collector.py  vad_backend.py
full_duplex_poc/scripts/: run_full_duplex_demo.py
full_duplex_poc/tests/: conftest.py  test_buffers.py  test_pipeline_smoke.py  test_state_machine.py
